--- a/17064 CS w RR/TeamCode/build.gradle
+++ b/17064 CS w RR/TeamCode/build.gradle
@@ -12,8 +12,33 @@
 // Custom definitions may go here
 
 // Include common definitions from above.
+
+buildscript {
+
+    repositories {
+
+        mavenCentral()
+
+        maven {
+            url = 'https://www.matthewo.tech/maven/'
+        }
+
+    }
+
+    dependencies {
+
+        classpath 'org.team11260:fast-load-plugin:0.1.2'
+        //implementation 'org.team11260:fast-load:0.1.2'
+
+    }
+
+}
+
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+
+apply plugin: 'org.team11260.fast-load-plugin'
+
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -30,4 +55,13 @@ dependencies {
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'org.team11260:fast-load:0.1.2'
+}
+
+repositories {
+
+    maven {
+        url = 'https://www.matthewo.tech/maven/'
+    }
+
 }
