--- a/17064 CS w RR/build.dependencies.gradle
+++ b/17064 CS w RR/build.dependencies.gradle
@@ -4,6 +4,14 @@ repositories {
     maven { url = 'https://maven.brott.dev/' }
 }
 
+repositories {
+    mavenCentral()
+    google() // Needed for androidx
+    maven {
+        url = 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+    }
+}
+
 dependencies {
     implementation 'org.firstinspires.ftc:Inspection:9.0.1'
     implementation 'org.firstinspires.ftc:Blocks:9.0.1'
@@ -19,5 +27,7 @@ dependencies {
     runtimeOnly 'org.tensorflow:tensorflow-lite:2.12.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.14'
+
+    implementation 'com.w8wjb.ftc:ftc-neodriver:1.0-SNAPSHOT'
 }
 
